input icons fix overflow scroll of todos TBD

--- a/frontend/src/app/aside-panel/aside-panel.component.css
+++ b/frontend/src/app/aside-panel/aside-panel.component.css
@@ -210,6 +210,7 @@ input[type="color"]::-webkit-color-swatch {
     height: 100%;
     padding: 2rem 0rem;
     margin-top: 1rem;
+    overflow: scroll;
   }
 
   .today-filters p {
