--- a/frontend/src/app/todos-section/todos-section.component.css
+++ b/frontend/src/app/todos-section/todos-section.component.css
@@ -42,6 +42,7 @@ form {
   width: 100%;
   background-color: #e9ecef;
   border-radius: 1rem;
+  padding: 0 0.5rem;
   justify-content: center;
 }
 
@@ -142,6 +143,10 @@ img {
   text-decoration: line-through;
 }
 
+form input {
+  flex-grow: 1;
+}
+
 /* ------------------------------------------------ */
 
 /* -------------------RESPONSIVE------------------- */
@@ -172,8 +177,7 @@ img {
   }
 
   form input {
-    width: 70%;
-    padding: 1rem;
+    flex-grow: 1;
   }
 
   .dot {
@@ -184,3 +188,51 @@ img {
 }
 
 /* ------------------------------------------------ */
+
+.select-container {
+  position: relative;
+  display: inline-block;
+}
+
+.select-hidden {
+  opacity: 0;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.dot-select {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  background-color: red;
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  /* display: none;
+    -webkit-appearance: none; */
+  margin: 0;
+  font-size: x-large;
+}
+input[type="date"]::-webkit-datetime-edit {
+  display: none;
+}
+
+input[type="time"]::-webkit-inner-spin-button,
+input[type="time"]::-webkit-calendar-picker-indicator {
+  /* display: none;
+  -webkit-appearance: none; */
+  margin: 0;
+  font-size: x-large;
+}
+input[type="time"]::-webkit-datetime-edit {
+  display: none;
+}
