--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -19,7 +19,14 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow: auto;
   height: 100vh;
   width: 100vw;
+}
+
+main {
+}
+
+app-todos-section {
+  overflow: scroll;
 }
